# guardrails

./: .env.eval.example  .gitignore  Dockerfile  Dockerfile.cuda  Dockerfile.gpu  Dockerfile.ml  Dockerfile.pytriton  Makefile  README.md  RELEASE.md  _REFACTOR.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
app/: config.py  guardrails.py  main.py  model_assets.py  policy.py  settings.py
app/core/: __init__.py  labels.py
app/detectors/: __init__.py  base.py  dateparser_detector.py  entropy_detector.py  factory.py  gliner_detector.py  ipaddress_detector.py  natasha_detector.py  phonenumber_detector.py  regex_detector.py  secret_detector.py
app/eval/: aggregate.py  cache_paths.py  cli.py  collection_resolver.py  compare.py  config.py  env.py  env_info.py  gates.py  labels.py  metrics.py  predictor.py  report.py  report_v3.py  run.py  script_profile.py  suite_loader.py  synthetic_cases.py  taxonomy.py  types.py  views.py  weights.py
app/eval_v3/: cli.py  compare.py  config.py
app/finetune/: gliner_pipeline.py
app/masking/: __init__.py  engine.py  payload.py
app/models/: __init__.py  api.py  entities.py  openai.py
app/proxy/: __init__.py  upstream.py
app/pytriton_server/: main.py  registry.py
app/runtime/: __init__.py  gliner_chunking.py  gliner_runtime.py  gliner_word_chunking.py  (+6 more)
configs/: policy.full.yaml  policy.yaml
docs/: API.md  ARCHITECTURE.md  DATA_ASSETS_TRACKER.md  DECISIONS.md  DETECTORS.md  EVAL.md  EVALUATION.md  FINETUNING.md  GPU_SUPPORT.md  OPERATIONS.md  REMOTE_EVAL.md  RUNBOOK_GPU_EVAL_AND_FAST_SPLITS.md
(+151 files in other folders)
